// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.pms.contracts.service;

option java_multiple_files = true;

import "io/harness/pms/contracts/ambiance/ambiance.proto";
import "io/harness/pms/contracts/refobjects/ref_objects.proto";

service SweepingOutputService {
  rpc resolve(SweepingOutputResolveBlobRequest) returns (SweepingOutputResolveBlobResponse);
  rpc resolveOptional(SweepingOutputResolveBlobRequest) returns (OptionalSweepingOutputResolveBlobResponse);
  rpc consume(SweepingOutputConsumeBlobRequest) returns (SweepingOutputConsumeBlobResponse);
  rpc listOutputsUsingNodeIds(SweepingOutputListRequest) returns (SweepingOutputListResponse);
}

message SweepingOutputResolveBlobRequest {
  io.harness.pms.contracts.ambiance.Ambiance ambiance = 1;
  io.harness.pms.contracts.refobjects.RefObject refObject = 2;
}

message SweepingOutputListRequest {
  io.harness.pms.contracts.ambiance.Ambiance ambiance = 1;
  string name = 2;
  repeated string nodeIds = 3;
}

message SweepingOutputListResponse {
  repeated OptionalSweepingOutputResolveBlobResponse sweepingOutputResolveBlobResponses = 1;
}

message SweepingOutputResolveBlobResponse {
  string stepTransput = 1;
}

message OptionalSweepingOutputResolveBlobResponse {
  bool found = 1;
  string stepTransput = 2;
}
message SweepingOutputConsumeBlobRequest {
  io.harness.pms.contracts.ambiance.Ambiance ambiance = 1;
  string name = 2;
  string groupName = 3;
  string value = 4;
}

message SweepingOutputConsumeBlobResponse {
  string response = 1;
}
